2012-03-26 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #33279: Evaluation of arrays returns always false
	* Follow-up to feature #34447: Add support for saltedpasswords and rsaauth
	* Add feature #34676: Add support for title attribute on input fields for TCA markers (Thanks to Carlos Meyer)

2012-03-25 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #32066: Security bug in admin confirmation

2012-03-24 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to bug #13349: Checkbox is set to "0" if not checked (Thanks to Oliver Hader)

2012-03-23 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #34447: Add support for saltedpasswords and rsaauth
	* Fix bug #26708: Autologin does not work with rsa and saltedpasswords
	* Fix bug #34417: Does not work with srfeuserregister_t3secsaltedpw anymore
	* Fix bug #34792: Edit profile sets password to dummyPassword if useMd5Password is used
	* Fix bug #34453: "password repeat" field has the value ###FIELD_password_again###
	* Fix bug #31152: Can't eval password on edit
	* Fix bug #31140: Dummy password "Joh 3,16" is used in the registration
	* Fix bug #26952: Missing declaration of pw_change in javascript
	* Add feature #34907: Remove Old-style template
	* Fix bug #34217: Radio buttons do not respect db values in edit view (Thanks to Jan Loderhose)
	* Fix bug #13349: Checkbox is set to "0" if not checked (Thanks to Oliver Hader)
	* Fix #15813 (old bug tracker): Labels with variables do not get processed if fieldname contains numbers (Thanks to Joerg Winter)
	* Add feature #6646 (old bug tracker): Possibility to disable enforcing of username field (Thanks to François Suter)
	* Fix #15659 (old bug tracker): Field fe_cruser_id is never set (Thanks to Jens Herden)
	* Fix #17686 (old bug tracker): Password change does not execute any validation
	* Fix #6308 (old bug tracker): Wrong marker in template (Thanks to Bjorn T. Hallberg)