@@ -2,6 +2,9 @@
 	* Fix bug #33279: Evaluation of arrays returns always false
 	* Follow-up to feature #34447: Add support for saltedpasswords and rsaauth
 	* Add feature #34676: Add support for title attribute on input fields for TCA markers (Thanks to Carlos Meyer)
+	* Fix bug #14699 (old bug tracker): Cannot remove "username" field in EDIT view
+	* Fix bug #31012: Images lost on profile editing
+	* Fix bug #27521: Deleting images in EDIT mode leads to broken references	
 
 2012-03-25 Stanislas Rolland  <typo3@sjbr.ca>
 	* Fix bug #32066: Security bug in admin confirmation
